--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.13'
-    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.mockninja'
@@ -18,12 +16,17 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.2")
+    testImplementation("org.assertj:assertj-core:3.25.3")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.2")
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation("org.apache.poi:poi:5.2.3")
     implementation("org.apache.poi:poi-ooxml:5.2.3")
+    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
+     runtimeOnly 'org.apache.logging.log4j:log4j-core:2.23.1' // 필요하면 추가
+
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
