--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
+import com.vanniktech.maven.publish.SonatypeHost
+
 plugins {
     id 'java'
-    id 'com.vanniktech.maven.publish' version '0.29.0'
+    id 'com.vanniktech.maven.publish' version '0.30.0'
 }
 
 group = 'io.github.ninja-excel'
@@ -13,7 +15,6 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
     withSourcesJar()
-    withJavadocJar()
 }
 
 repositories {
@@ -66,6 +67,6 @@ mavenPublishing {
         }
     }
 
-    publishToMavenCentral()
+    publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL)
     signAllPublications()
 }
