--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ java {
     withSourcesJar()
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.release = 8
+}
+
 repositories {
     mavenCentral()
 }
